<resources>
    <string name="app_name">TwitchApp</string>
    <string name="get_user_info">User info</string>
    <string name="get_stream_info">Stream info</string>
    <string name="get_channel_info">Channel info</string>
    <string name="get_top_game">Top game</string>
    <string name="get_user_follows">Follows</string>
    <string name="get_user_followers">Followers</string>

    <string name="user_id_text">User id : %1$d</string>
</resources>
